3.5 fixes
