# apps/api/app/schemas/generated.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  api-spec.yaml
-#   timestamp: 2026-06-17T17:19:34+00:00
+#   timestamp: 2026-06-20T00:28:45+00:00
 
 from __future__ import annotations
 
@@ -316,6 +316,21 @@ class ReadingPassage(BaseModel):
 class PaginatedReadingPassage(BaseModel):
     data: list[ReadingPassage]
     total: Annotated[int, Field(examples=[200])]
+    page: Annotated[int, Field(examples=[1])]
+    page_size: Annotated[int, Field(examples=[20])]
+
+
+class UserMnemonic(BaseModel):
+    character: Annotated[str, Field(examples=['新'])]
+    user_mnemonic: Annotated[
+        str, Field(examples=['My new axe stands against the tree outside.'])
+    ]
+    updated_at: Annotated[AwareDatetime, Field(examples=['2026-01-01T00:00:00Z'])]
+
+
+class PaginatedUserMnemonic(BaseModel):
+    data: list[UserMnemonic]
+    total: Annotated[int, Field(examples=[12])]
     page: Annotated[int, Field(examples=[1])]
     page_size: Annotated[int, Field(examples=[20])]
 
